--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
         />
 
         <label for="rating">What would you rate us? </label>
-        <input type="number" name="review" required min="1" max="10" />
+        <input type="number" name="rating" required min="1" max="10" />
 
         <button id="submit-button" type="submit">SUBMIT</button>
       </form>
