--- a/client/index.html
+++ b/client/index.html
@@ -40,9 +40,7 @@
         <input
           type="text"
           name="review"
-          required
-          placeholder="Don't be shy...keep it real!"
-        />
+          required placeholder="Don't be shy...keep it real!"/>
 
         <label for="rating">What would you rate us? </label>
         <input type="number" name="rating" required min="1" max="10" />
