fixed: clientside bug was due to Supabase service disruption. Tested and verified fixed

--- a/client/index.html
+++ b/client/index.html
@@ -38,9 +38,7 @@
 
         <label for="review">How was your experience?</label>
         <input
-          type="text"
-          name="review"
-          required placeholder="Don't be shy...keep it real!"/>
+          type="text" name="review" required placeholder="Don't be shy...keep it real!"/>
 
         <label for="rating">What would you rate us? </label>
         <input type="number" name="rating" required min="1" max="10" />
