feat: js functionality for reviews complete

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     <!-- use semantic tags e.g. form with all the necessary bells and whistles -->
     <!-- the types in your html need to match the types you have in your database -->
     <!-- client, server and database operate holistically -->
-    <section>
+    <section id="review-section">
       <form id="review-form">
         <label for="name">What is your name?</label>
         <input type="text" name="name" required />
@@ -46,7 +46,7 @@
         <button id="submit-button" type="submit">SUBMIT</button>
       </form>
     </section>
-
+<section id="review-container"></section>
     <section>
       <footer>
         <div><a href="https://www.flaticon.com/free-icons/restaurant" title="restaurant icons">Restaurant icons created by Freepik - Flaticon</a></div>
