--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
     <!-- the types in your html need to match the types you have in your database -->
     <!-- client, server and database operate holistically -->
     <section id="review-section">
-      <form id="review-form" onsubmit="alert('Thank you! Your review has been submitted.')">
+      <form id="review-form">
         <label for="name">What is your name?</label>
         <input type="text" name="name" required />
 
@@ -43,9 +43,7 @@
         <label for="rating">What would you rate us? </label>
         <input type="number" name="rating" required min="1" max="10" />
 
-        <button id="submit-button" type="submit" onclick="window.location.reload()= window.location.href" value="Reset">SUBMIT</button>
-
-
+        <button id="submit-button" type="submit" onclick="window.location.reload()" value="Reset">SUBMIT</button>
       </form>
     </section>
 <section id="review-container"></section>
