db: dummy user data cleaned up

--- a/client/index.html
+++ b/client/index.html
@@ -43,10 +43,12 @@
         <label for="rating">What would you rate us? </label>
         <input type="number" name="rating" required min="1" max="10" />
 
-        <button id="submit-button" type="submit" onclick="window.location.reload()" value="Reset">SUBMIT</button>
+        <button id="submit-button" type="submit" onclick="window.location.reload() = window.location.href" value="Reset">SUBMIT</button>
       </form>
     </section>
-<section id="review-container"></section>
+
+    <section id="review-container"></section>
+
     <section>
       <footer>
         <div><a href="https://www.flaticon.com/free-icons/restaurant" title="restaurant icons">Restaurant icons created by Freepik - Flaticon</a></div>
