--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="#" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHOP&NYAM</title>
+    <title>CHOP&NYAM GUESTBOOK</title>
     <!-- link favicon -->
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
     <!-- link social media icons for footer -->
@@ -21,72 +21,92 @@
     <a class="top-link hide" href="#top">↑</a>
     <a name="top"></a>
     <header>
-      <img src="./assets/logo.png" alt="Chop&Nyam logo" />
-      <h1>WELCOME TO CHOP&NYAM</h1>
-      <nav>
+      <div id="logo">
+        <img id="logo" src="./assets/logo.png" alt="Chop&Nyam logo" />
+      </div>
+      <div id="titles">
+        <h1>CUSTOMER GUESTBOOK</h1>
+      </div>
+
+      <!-- not necessary for the purpose of this project - for a full-size website it would be needed -->
+      <!-- <nav>
         <a href="#">ABOUT US</a>
         <a href="#">REVIEWS</a>
         <a href="#">CONTACT US</a>
-      </nav>
+      </nav> -->
     </header>
-    <marquee behavior="sliding" direction="left" scrollamount="5"
-      ><p>
-        WELCOME TO CHOP&NYAM - AFRO-CARIBBEAN KITCHEN & BAKERY - LOCATIONS IN
-        LEICESTER, BIRMINGHAM, MANCHESTER AND MANY MORE TO COME - WE WANT TO
-        HEAR FROM YOU!
-      </p></marquee
+    <marquee behavior="sliding" direction="left" scrollamount="8"
+      ><h2>
+        ** CHOP & NYAM AFRO-CARIBBEAN KITCHEN & BAKERY ** LOCATIONS IN
+        LEICESTER, BIRMINGHAM, MANCHESTER AND MANY MORE TO COME! ** WELCOME TO
+        OUR CUSTOMER GUESTBOOK ** LEAVE US A REVIEW - WE'D LOVE TO HEAR FROM
+        YOU! **
+      </h2></marquee
     >
     <!-- //TODO: An element to allow users to input data -->
     <!-- use semantic tags e.g. form with all the necessary bells and whistles -->
     <!-- the types in your html need to match the types you have in your database -->
     <!-- client, server and database operate holistically -->
-    <section id="review-section">
-      <h2>CAN YOU SPARE TWO CENTS? BECAUSE WE'D LOVE YOURS!</h2>
-      <form id="review-form">
-        <label for="name">What is your name?</label>
-        <input aria-label="Name input field" type="text" name="name" required />
 
-        <label for="location">Where are you visiting from:</label>
-        <input
-          aria-label="Location input field"
-          type="text"
-          name="location"
-          required
-        />
+    <!--! tried to have two images on either side which could stay stationary whilst only the middle scrolls - too complex for now -->
+    <!-- <section id="review-section"> -->
+      <!-- <div id="image1"><img src="./public/assets/waiter.jpg" alt="#" /></div>
+      <div id="image2"><img src="./public/assets/customer.jpg" alt="#" /></div> -->
 
-        <label for="review">How was your experience?</label>
-        <input
-          aria-label="Review input field"
-          type="text"
-          name="review"
-          required
-          placeholder="Don't be shy...keep it real!"
-        />
+      <section id="form-section">
+        <h3 id="container-title">CAN YOU SPARE TWO CENTS?</h3>
+        <form id="review-form">
+          <label for="name">What is your name?</label>
+          <input
+            aria-label="Name input field"
+            type="text"
+            name="name"
+            required
+          />
 
-        <label for="rating">What would you rate us? </label>
-        <input
-          aria-label="Rating input field"
-          type="number"
-          name="rating"
-          required
-          min="1"
-          max="10"
-        />
+          <label for="location">Where are you visiting from:</label>
+          <input
+            aria-label="Location input field"
+            type="text"
+            name="location"
+            required
+          />
 
-        <button
-          aria-label="Submit button"
-          id="submit-button"
-          type="submit"
-          onclick="window.location.reload() = window.location.href"
-          value="Reset"
-        >
-          SUBMIT
-        </button>
-      </form>
+          <label for="review">How was your experience?</label>
+          <input
+            aria-label="Review input field"
+            type="text"
+            name="review"
+            required
+            placeholder="Don't be shy...keep it real!"
+          />
+
+          <label for="rating">What would you rate us? </label>
+          <input
+            aria-label="Rating input field"
+            type="number"
+            name="rating"
+            required
+            min="1"
+            max="10"
+          />
+
+          <button
+            aria-label="Submit button"
+            id="submit-button"
+            type="submit"
+            onclick="window.location.reload() = window.location.href"
+            value="Reset"
+          >
+            SUBMIT
+          </button>
+        </form>
+      </section>
     </section>
-
     <section id="review-container">
-      <h3>HERE IS THE COLLECTIVE CONSCIOUSNESS OF CHOP&NYAM</h3>
+      <h3 id="display-title">
+        HERE IS THE COLLECTIVE CONSCIOUSNESS OF CHOP&NYAM'S CUSTOMERS:
+      </h3>
     </section>
 
     <section>
