file paths fixed

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <a name="top"></a>
     <header>
       <div id="logo">
-        <img id="logo" src="./assets/logo.png" alt="Chop&Nyam logo" />
+        <img id="logo" src="./public/assets/logo.png" alt="Chop&Nyam logo" />
       </div>
       <div >
         <h1>CUSTOMER GUESTBOOK</h1>
